Finalização cadastro de bancos

--- a/src/main/resources/mensagens/Messages.properties
+++ b/src/main/resources/mensagens/Messages.properties
@@ -1,2 +1,3 @@
 javax.faces.validator.BeanValidator.MESSAGE = {1} {0}
 javax.faces.converter.DateTimeConverter.DATE = {2} não é uma data válida
+javax.faces.component.UIInput.REQUIRED={0} não informado
